log
Fri 06 Oct 2023 09:11:04 PM UTC: 
 tests:  0|5
total_score: 0/70
d8451bc
Sat 07 Oct 2023 12:08:25 AM UTC: 
 sudoku.c | 57 ++++++++++++++++++++++++++++++++++++++++++---------------
 1 file changed, 42 insertions(+), 15 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:75:20: error: expected expression before ‘List’
   75 |           pushBack(List, nodo_adj);
      |                    ^~~~
sudoku.c:75:11: error: too few arguments to function ‘pushBack’
   75 |           pushBack(List, nodo_adj);
      |           ^~~~~~~~
In file included from test.c:4:
list.h:23:6: note: declared here
   23 | void pushBack(List* list, void* data);
      |      ^~~~~~~~
In file included from test.c:5:
sudoku.c:77:16: error: expected expression before ‘List’
   77 |         return List;
      |                ^~~~
Compilation failed
8e429b1
Sat 07 Oct 2023 12:08:45 AM UTC: 
 sudoku.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|5
total_score: 0/70
c26317a
Sat 07 Oct 2023 12:11:14 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
585cd38
Sat 07 Oct 2023 12:11:22 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
8fac1ee
Sat 07 Oct 2023 12:11:33 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
bf43e6a
Sat 07 Oct 2023 12:11:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
95ad224
Sat 07 Oct 2023 12:14:25 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
e3c491d
Sat 07 Oct 2023 12:19:44 AM UTC: 
 sudoku.c | 16 ++++++++++++----
 1 file changed, 12 insertions(+), 4 deletions(-)
 tests:  3|3
total_score: 25/70
9e1433e
Sat 07 Oct 2023 12:39:03 AM UTC: 
 sudoku.c | 26 +++++++++++++++++++++++++-
 1 file changed, 25 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:99:21: error: ‘n’ undeclared (first use in this function)
   99 |   push(lista_stack, n);
      |                     ^
sudoku.c:99:21: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:114:5: error: this ‘while’ clause does not guard... [-Werror=misleading-indentation]
  114 |     while(nodo_adj != NULL);
      |     ^~~~~
sudoku.c:115:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘while’
  115 |     {
      |     ^
cc1: all warnings being treated as errors
Compilation failed
65b9834
Sat 07 Oct 2023 12:39:24 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:99:21: error: ‘n’ undeclared (first use in this function)
   99 |   push(lista_stack, n);
      |                     ^
sudoku.c:99:21: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
030a4a2
Sat 07 Oct 2023 12:39:46 AM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
76d4aa1
